--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@redux-offline/redux-offline",
-  "version": "2.5.2",
+  "name": "@janrop/redux-offline-expo",
+  "version": "2.5.3",
   "description": "Redux Offline-First Architecture",
   "main": "lib/index.js",
   "types": "./typings.d.ts",
@@ -21,14 +21,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/redux-offline/redux-offline"
+    "url": "git+https://github.com/janrop/redux-offline"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/redux-offline/redux-offline/issues"
+    "url": "https://github.com/janrop/redux-offline/issues"
   },
-  "homepage": "https://github.com/redux-offline/redux-offline#readme",
+  "homepage": "https://github.com/janrop/redux-offline#readme",
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
@@ -37,6 +37,7 @@
     "@babel/plugin-transform-flow-strip-types": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@react-native-community/netinfo": "^5.6.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
@@ -61,6 +62,7 @@
     "redux-persist": "^4.6.0"
   },
   "peerDependencies": {
-    "redux": ">=3"
+    "redux": ">=3",
+    "@react-native-community/netinfo": "^5.6.2"
   }
 }
